[package]
name = "iln_balance_check"
version = "0.1.0"
authors = ["jorian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![feature(slice_partition_dedup)]

[dependencies]
komodo_rpc_client = { git = "https://github.com/jorian/komodorpc-rust-client" }
csv = "1.1.3"